added medianOf to Band Maths extensions